--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^19.1.2",
+    "@react-native-firebase/auth": "^19.1.2",
+    "@react-native-firebase/messaging": "^19.1.2",
+    "@react-native-google-signin/google-signin": "^10.1.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
+    "react-native-permissions": "^4.1.5",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
